--- a/estilo/style.css
+++ b/estilo/style.css
@@ -114,7 +114,7 @@ main h2 {
 }
 main p {
     margin: 15px 0px 15px 0px;
-    
+    text-align: justify;
     text-indent: 30px;
     font-size: 1em;
     line-height: 1.5em;
